widget/windows/nsWindowTaskbarConcealer.h
@@ -24,6 +24,10 @@ class nsWindow::TaskbarConcealer {
   // nsWindow pointer is not needed, and will not be acquired or accessed.
   static void OnWindowDestroyed(HWND aWnd);
 
+  // To be called when a window is maximized. Harmlessly redundant with
+  // OnFullscreenChanged.
+  static void OnWindowMaximized(nsWindow* aWin);
+
   // To be called when the Gecko-fullscreen state of a window changes.
   static void OnFullscreenChanged(nsWindow* aWin, bool enteredFullscreen);
 
